# LightningLinks

./: .gitignore  .pre-commit-config.yaml  French Influence on American Government.md  History of the Perceptron.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/: constants.py  lightning_links_creator.py  main.py  note_handler.py  parser.py  smart_assistant.py
testNoteDirectory/: invalid ending.md  multiple sections note.md  single link.md
testNoteDirectory/.obsidian/: similar_notes.json
tests/: tests.py
tests/testNoteDirectory/: contains YAML.md  contains alias.md  example note.md  exampleDrawing.excalidraw.md  invalid ending.md  multiple sections note.md  no headers.md  no tags with header.md  single link.md  valid ending no lightning links.md
tests/testNoteDirectory/.obsidian/: similar_notes.json
